--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">Hackacloud</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h2 class="project-tagline">Cloud security and hacking from towardsnetwork</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
