--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: 'en-US' }}">
+<html lang="{{ site.lang | default: "en-US" }}">
   <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 {% seo %}
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" as="style" type="text/css" crossorigin>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+    <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <![endif]-->
     {% include head-custom.html %}
   </head>
   <body>
-    <a id="skip-to-content" href="#content">Skip to the content.</a>
+    <div class="wrapper">
+      <header>
+        <img src="https://raw.githubusercontent.com/hackacloud/hackacloud.github.io/main/hackacloud.png" alt="Logo" />
+        <p>HackAcloud</p>
+        
+      </header>
+      <section>
 
-    <header class="page-header" role="banner">
-      <h1 class="project-name">Hackacloud</h1>
-      <h2 class="project-tagline">Cloud security and hacking from towardsnetwork</h2>
-    </header>
-
-    <main id="content" class="main-content" role="main">
       {{ content }}
 
-      <footer class="site-footer">
-          <span class="site-footer-owner"><a href="https://hacka.cloud">Hackacloud</a> from <a href="https://towards.network">TowardsNetwork</a>.</span>
-        <span class="site-footer-credits">Contact us at <a href="mailto://contact@towards.network">contact@towards.network</a>.</span>
+      </section>
+      <footer>
+        {% if site.github.is_project_page %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p><small>HackAcloud &mdash; From <a href="https://towards.network">TowardsNetwork</a><br><a href="mailto:contact@towards.network">contact@towardsnetwork</a></small></p>
       </footer>
-    </main>
+    </div>
+    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
 </html>
