--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <img src="https://raw.githubusercontent.com/hackacloud/hackacloud.github.io/main/hackacloud.png" alt="Logo" />
+        <img src="https://raw.githubusercontent.com/hackacloud/hackacloud.github.io/main/hackacloud.png" alt="hackacloud" width="80%" height="80%" />
         <p>HackAcloud</p>
         
       </header>
