--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,1 @@
-<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/hackacloud/hackacloud.github.io/main/hackacloud.png" >
+<link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/hackacloud/hackacloud.github.io/main/hackacloud-security.png" >
