--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,12 @@
       <section id="main_content">
         {{ content }}
       </section>
+      <footer>
+        {% if site.github.is_project_page %}
+        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
+        {% endif %}
+        <p><small>Sandboxin &mdash; From <a href="https://towards.network">TowardsNetwork</a><br><a href="mailto:contact@towards.network">contact@towardsnetwork</a></small></p>
+      </footer>
     </div>
   </body>
 </html>
