--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,16 +17,12 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
 
-            <div><a id="forkme_banner" href="https://medium.com/@hackacloud">Medium</a></div>
+            <div><a id="forkme_banner" href="https://medium.com/@hackacloud">Medium</a></div><br>
             <div><a id="forkme_banner" href="https://twitter.com/twitter">Twitter</a></div>
 
           <h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
           <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
 
-            <section id="downloads">
-              <a class="forkme_banner" href="https://medium.com/@hackacloud">Medium</a>
-              <a class="forkme_banner" href="https://twitter.com/twitter">Twitter</a>
-            </section>
         </header>
     </div>
 
