--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,7 +5,7 @@ $medium-breakpoint: 42em !default;
 // Headers
 $header-heading-color: #fff !default;
 $header-bg-color: #159957 !default;
-$header-bg-color-secondary: #991515 !default;
+$header-bg-color-secondary: #db0f0f !default;
 
 // Text
 $section-headings-color: #159957 !default;
