--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #db0f0f !default;
+$header-bg-color: #143F6B !default;
+$header-bg-color-secondary: #F55353 !default;
 
 // Text
 $section-headings-color: #159957 !default;
