--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,9 +3,9 @@ $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
 
 // Headers
-$header-heading-color: #fff !default;
-$header-bg-color: #143F6B !default;
-$header-bg-color-secondary: #F55353 !default;
+$header-heading-color: #fff !default; 
+$header-bg-color: #003973 !default;
+$header-bg-color-secondary: #E5E5BE !default;
 
 // Text
 $section-headings-color: #159957 !default;
